--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">ITC HUPH</a></h1>
+      <h1 class="logo me-auto"><a href="">ITC HUPH</a></h1>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -453,12 +453,30 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-6 col-md-6 footer-links">
+          <div class="col-lg-3 col-md-6 footer-itc">
             <h3>ITClub</h3>
             <p>Nơi tình yêu bắt đầu</p>
           </div>
 
-          <div class="col-lg-6 col-md-6 footer-links">
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Back to</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#itc">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#team">Team</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="index.html#faq">FAQ</a></li> -->
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="ctv">Join the Club</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="cfs">Confession</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Product</a></li> -->
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Social Networks</h4>
             <p>Kết nối với chúng mình qua các kênh MXH</p>
             <div class="social-links mt-3">
